[package]
name = "dandee"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opener = "0.7.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version  = "1.37.0", features = ["rt"]}
webster = "0.3.0"
